--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,7 +17,7 @@
   color: #ea580c;
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
-  font-family: 'Blippo', fantasy;
+  font-weight: bolder;
 }
 
 .subtitle {
